Add link to github repo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <p>
 	Bookmarklet: <a href='javascript:!function(){var e="https://philhawksworth.github.io/encard/",t=document.createElement("link");t.rel="stylesheet",t.href=e+"jira-cards.css",t.media="screen,print",t.type="text/css",document.getElementsByTagName("head")[0].appendChild(t);var a=document.createElement("script");a.src=e+"jira-cards.js",document.body.appendChild(a)}();'>Encard</a>
 </p>
-
+<hr>
+Fork the project on <a href="https://github.com/philhawksworth/encard">Github</a>
 <hr>
 <p>
 	Inspired by Paul Downey's <a href="http://psd.github.io/pivotal-cards/">Pivotal Cards</a>
